# edge-scanner

./: .gitignore  README.md  pyproject.toml
config/: links.yaml  settings.toml
dashboard/: app.py
deploy/: dashboard.service  scanner.service
docs/: api-findings.md  deploy-pi.md  edge-scanner-design.md  implementation-plan.md
scanner/: __init__.py  analysis.py  arb.py  config.py  curation.py  daemon.py  edge.py  models.py  paper.py  store.py
scanner/connectors/: __init__.py  base.py  kalshi.py  manifold.py  polymarket.py
scripts/: analyze.py  curate.py  report.py
tests/: test_analysis.py  test_arb.py  test_config.py  test_curation.py  test_daemon_boot.py  test_edge.py  test_edge_wiring.py  test_fees.py  test_kalshi.py  test_manifold.py  test_paper.py  test_polymarket.py
