[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edge-scanner"
version = "0.1.0"
description = "Read-only cross-venue prediction market edge scanner (Manifold, Kalshi, Polymarket)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.36",
    "pandas>=2.2",
]

[dependency-groups]
# uv-native dev group: `uv sync` installs this by default.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
edge-scanner = "scanner.daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
